# translation_demo_web

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
backend/: Dockerfile  api.py  main.py  models_config.py  run_server.py
backend/schemas/: __init__.py  model_profile.py  model_profiles.py  translation_request.py  translation_response.py
backend/translators/: __init__.py  deepl_translator.py  google_translator.py  openai_translator.py  post_editor_translator.py
configs/: config.yaml
configs/model/: gemma3.yaml  gpt-oss.yaml  gpt35-turbo.yaml  gpt4o-mini.yaml  gpt4o.yaml  qwen3.yaml
frontend/: .dockerignore  Caddyfile  Dockerfile  entrypoint.sh  nginx.conf  svelte.config.js
frontend/src/: app.d.ts
frontend/src/components/: TranslationTimer.svelte
frontend/src/routes/: +page.svelte
my-app/: package.json  pnpm-lock.yaml  tsconfig.json
my-app/src/components/: LangModal.svelte  TranslationHistory.svelte  langs.svelte  models.svelte
my-app/src/routes/: +layout.js  +page.svelte
src/project_wed/: __init__.py
